# yaml-config-for-python-apps

./: README.md  pyproject.toml
