[tool.poetry]
name = "yaml-config-for-python"
version = "0.1.0"
description = ""
authors = ["aky1222 <aky1222@gmail.com>"]
readme = "README.md"
packages = [{include = "yaml_config_for_python"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
